<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="20dp"
    android:paddingVertical="16dp"
    android:background="@drawable/chat_bg"
    tools:ignore="RtlSymmetry">

    <TextView
        android:id="@+id/commentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/black"
        style="@style/Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameAndTime"
        tools:text="Dummy" />

    <EditText
        android:id="@+id/commentEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="@drawable/edit_text_bg"
        android:visibility="gone"
        android:inputType="textMultiLine"
        style="@style/Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameAndTime" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/commentEditButton"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_marginEnd="10dp"
        android:background="@null"
        android:text="@string/edit"
        android:textSize="10sp"
        android:textAllCaps="false"
        android:textColor="@color/gray"
        style="@style/Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/editDoneButton"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_marginEnd="5dp"
        android:background="@null"
        android:text="@string/done"
        android:visibility="gone"
        android:textSize="10sp"
        android:textAllCaps="false"
        android:textColor="@color/gray"
        style="@style/Medium"
        app:layout_constraintEnd_toStartOf="@+id/editCancelButton"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/editCancelButton"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_marginEnd="10dp"
        android:background="@null"
        android:visibility="gone"
        android:text="@string/cancel"
        android:textSize="10sp"
        android:textAllCaps="false"
        android:textColor="@color/red"
        style="@style/Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp" />

    <LinearLayout
        android:id="@+id/nameAndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="12sp"
            android:text="TextView"
            style="@style/Medium"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/timeStampText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="TextView"
            android:textSize="10sp"
            android:textColor="#999999"
            style="@style/Medium"
            tools:ignore="HardcodedText,SmallSp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>